package com.xcsd.edu.parent.message;

option java_package = "com.xcsd.rpc.proto";
option java_outer_classname = "DataProto";

enum EventType {		//type		bid类型
	APP_LOGIN = 1;		//APP登陆		不需要
	APP_LOGOUT = 2;		//APP登出		不需要
	CHANNEL_IN = 3;		//功能模块进入	channelId(模块ID)
	CHANNEL_OUT = 4;	//功能模块退出	channelId
	GAME_IN = 5;		//进入游戏		gameId
	GAME_OUT = 6;		//退出游戏		gameId
	LESSON_IN = 7;		//进入课程		lessonId
	LESSON_OUT = 8;		//退出课程		lessonId
	ARTICLE_IN = 9;		//点击文章		articleId
	ARTICLE_OUT = 10;	//退出文章		articleId
	SINGLE_CHAT = 11;	//单聊		toPid
	GROUP_CHAT = 12;	//群聊		groupId
	TEACHER_GROUP_CHAT = 13;	//教师群聊	groupId
}

message Event {
	required int64 userId = 1;		//触发事件的用户ID
	required EventType eventType = 2;
	optional int64 bid = 3;
	required int64 timestamp = 4;	//业务时间
}

//URL:/data/event
message ReportEventRequest {
	required int64 serialNo = 1;	//客户端批次号
	repeated Event eventList = 2;
	optional int64 sendTime = 3;	//客户端发送时的时间戳
}

message ReportEventResponse {
	required int32 result = 1;			//1成功 2已处理 3失败
	optional string msg = 2;
	optional int64 serialNo = 3;		//返回客户端发送的批次号
	optional int64 sysTimestamp = 4;	//服务器系统时间戳
}